[gd_scene load_steps=4 format=3 uid="uid://cg6alys78tngi"]

[ext_resource type="Script" uid="uid://duw2enq1qv7fe" path="res://scenes/objects/vault.gd" id="1_na38l"]
[ext_resource type="Texture2D" uid="uid://cfk7doyntkqlp" path="res://scenes/objects/vault.png" id="2_4mah0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vp1ho"]
size = Vector2(13.793102, 9.968995)

[node name="Vault" type="Node2D"]
script = ExtResource("1_na38l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(6.7500005, -2)
scale = Vector2(4.59375, 5.3749995)
texture = ExtResource("2_4mah0")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -28.0
offset_top = -80.0
offset_right = 43.0
offset_bottom = -53.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(5.4375005, 5.3749995)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.1149423, 12.317829)
shape = SubResource("RectangleShape2D_vp1ho")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
